--- a/src/YACap.API/YACap.API.csproj
+++ b/src/YACap.API/YACap.API.csproj
@@ -8,7 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="DotNetCore.CAP" Version="6.2.1" />
-    <PackageReference Include="DotNetCore.CAP.InMemoryStorage" Version="6.2.1" />
+    <PackageReference Include="DotNetCore.CAP.Dashboard" Version="6.2.1" />
+    <PackageReference Include="DotNetCore.CAP.SqlServer" Version="6.2.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
     <PackageReference Include="Savorboard.CAP.InMemoryMessageQueue" Version="6.0.0" />     
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
