--- a/src/YACap.API/appsettings.json
+++ b/src/YACap.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlServer": "Data Source=localhost,1433;Initial Catalog=YACap;User Id=sa;Password=example_123;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
