--- a/src/YACap.API/appsettings.json
+++ b/src/YACap.API/appsettings.json
@@ -2,6 +2,14 @@
   "ConnectionStrings": {
     "SqlServer": "Data Source=localhost,1433;Initial Catalog=YACap;User Id=sa;Password=example_123;TrustServerCertificate=True;"
   },
+  "RabbitMQ": {
+    "HostName": "localhost",
+    "Port": 5672,
+    "UserName": "guest",
+    "Password": "guest",
+    "VirtualHost": "/",
+    "ExchangeName": "user"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
